--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.29",
+    "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/simple-icons": "^1.2.28",
-    "@nuxt/ui-pro": "^3.0.0",
+    "@nuxt/fonts": "^0.11.0",
+    "@nuxt/ui-pro": "^1.7.1",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
     "@vueuse/nuxt": "^13.0.0",
     "date-fns": "^4.1.0",
     "nuxt": "^3.16.0",
-    "zod": "^3.24.2"
+    "v-calendar": "^3.1.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.2.0",
     "eslint": "^9.22.0",
-    "typescript": "^5.8.2",
-    "vue-tsc": "^2.2.2"
+    "vue-tsc": "^2.1.10"
   },
   "resolutions": {
-    "vue-tsc": "2.2.2"
+    "vue-tsc": "2.1.10"
   },
-  "packageManager": "pnpm@10.6.2"
+  "packageManager": "pnpm@10.6.3"
 }
